# esmj

./: README.md  pyproject.toml
scripts/: convert_weights.py
src/esmj/: __init__.py  convert.py  hub.py  model.py  serialization.py
